PIP-292 Minor tidy up